<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.analysis.keyword</groupId>
  <artifactId>dnai</artifactId>
  <packaging>war</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>dnai Maven Webapp</name>
  <url>http://maven.apache.org</url>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
	<dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-lang3</artifactId>
	    <version>3.11</version>
	</dependency>
	    
	<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
	<dependency>
	    <groupId>com.googlecode.json-simple</groupId>
	    <artifactId>json-simple</artifactId>
	    <version>1.1</version>
	</dependency>
		
	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
	<dependency>
	    <groupId>javax.mail</groupId>
	    <artifactId>mail</artifactId>
	    <version>1.4.7</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
	<dependency>
	    <groupId>mysql</groupId>
	    <artifactId>mysql-connector-java</artifactId>
	    <version>5.1.47</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi</artifactId>
	    <version>3.15</version>
	</dependency>
	
	<!-- 셀레니움 -->
	<dependency>
		<groupId>org.seleniumhq.selenium</groupId>
		<artifactId>selenium-server</artifactId>
		<version>2.53.0</version>
	</dependency>
	
	<dependency>
	    <groupId>kr.co.shineware</groupId>
	    <artifactId>komoran</artifactId>
	    <version>2.4-e</version>
	    <scope>system</scope>
    	<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/komoran-2.4-e.jar</systemPath>
	</dependency>
  	
  	<dependency>
	    <groupId>kr.co.shineware</groupId>
	    <artifactId>shineware-common</artifactId>
	    <version>2.0</version>
	    <scope>system</scope>
    	<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/shineware-common-2.0.jar</systemPath>
	</dependency>
	
	<dependency>
	    <groupId>kr.co.shineware</groupId>
	    <artifactId>shineware-ds</artifactId>
	    <version>1.0</version>
	    <scope>system</scope>
    	<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/shineware-ds-1.0.jar</systemPath>
	</dependency>
	
	
	<dependency>
	    <groupId>org.apache.lucene.analysis</groupId>
	    <artifactId>arirang</artifactId>
	    <version>1.0</version>
	    <scope>system</scope>
    	<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/arirang.jar</systemPath>
	</dependency>
	
	 
	<dependency>
	    <groupId>org.apache.lucene.analysis</groupId>
	    <artifactId>arirang.lucene-analyzer</artifactId>
	    <version>7.2.1.1</version>
	    <scope>system</scope>
    	<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/arirang.lucene-analyzer-7.2.1.1.jar</systemPath>
	</dependency>
	
  </dependencies>
  <build>
    <finalName>dnai</finalName>
     <!-- tomcat 부분 --> 
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.5</version>
      </plugin>
        
      <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-compiler-plugin</artifactId>
	    <version>3.6.1</version>
	    <configuration>
	      <source>1.8</source>
	      <target>1.8</target>
	    </configuration>
	  </plugin>



      <plugin>
        <groupId>org.apache.tomcat.maven</groupId>
        <artifactId>tomcat8-maven-plugin</artifactId>
        <version>2.2</version>
        <configuration>
          <port>8080</port>
          <path>/</path>
          <contextReloadable>true</contextReloadable>
          <systemProperties>
            <JAVA_OPTS>-Xms512m -Xmx512m --XX:MaxPermSize=128m</JAVA_OPTS>
          </systemProperties>
        </configuration>
      </plugin>     
      
    </plugins>
    <!--tomcat 부분 -->
  </build>
</project>
